# mandelbrot-playdate

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
SOURCE/: main.lua  pdxinfo
src/: debug.c  debug.h  fixmath.h  main.c  mandelbrot.c  mandelbrot.h
